--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -211,6 +211,7 @@ body {
   height: 100%;
   scrollbar-width: none;        /* Firefox */
   -ms-overflow-style: none;     /* IE and Edge */
+  scroll-behavior: smooth;
 }
 
 /* Chrome, Safari, Opera */
