--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -362,25 +362,48 @@ input::placeholder {
   text-align: center;
 }
 
-.select-box
+.options-container
 {
-  display: flex;
-  width: 400px;
-}
-.select-box .options-container
-{
-  background: black;
-  
+  background-color: white;
+  color: black;
+  height: 10%;
+  /* height: 50px; */
+  width: 100%;
+  border-radius: 8px;
+  transition: all 0.4s;
 }
 
-.select-box:hover
+.options-container:has(input[type="radio"]:checked) {
+  border: 2px solid black;
+}
+
+.option
 {
-  background-color: #f7dec4;
-  color: #000;
   cursor: pointer;
 }
 
-.select-box .option .radio
+.option label
+{
+  cursor: pointer;
+}
+
+.option:hover
+{
+  background-color: #a8b8bd;
+  color: #000;
+  cursor: pointer;
+  border-radius: 8px;
+}
+
+.option .radio
 {
   display: none;
 }
+
+/* input[type="radio"]:checked + label {
+  border-color: #a8b8bd;
+  border-style: solid;
+  width: 100%;
+  color: #000;
+  border-radius: 8px;
+} */
