--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -206,6 +206,7 @@ body {
   box-sizing: border-box;
   text-align: center;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+  overflow-y: auto;
 }
 
 .card-scroll-content {
@@ -296,7 +297,7 @@ body {
   display: flex;
   flex-direction: column;
   /* gap: 1rem; */
-  width: 100%;
+  width: 70%;
 } 
 
 /*
@@ -364,6 +365,11 @@ body {
   }
 } */
 
+input
+{
+  text-align: center;
+}
+
 input::placeholder {
   text-align: center;
 }
@@ -372,7 +378,7 @@ input::placeholder {
 {
   background-color: white;
   color: black;
-  height: 10%;
+  height: 35px;
   /* height: 50px; */
   width: 100%;
   border-radius: 8px;
@@ -392,6 +398,7 @@ input::placeholder {
 {
   cursor: pointer;
   width: 100%;
+  height: 35px;
 }
 
 .option:hover
@@ -407,29 +414,47 @@ input::placeholder {
   display: none;
 }
 
-.regBtn
+.registerBtn
 {
   display: flex;
   justify-content: center;
   gap: 1rem;
 }
 
-#whitebeltdiv {
+.beltdiv {
   /* border-color: #000;
   border-style: solid; */
   position: relative;
   /* display: flex; */
   /* flex-direction: column; */
   /* align-items: center; */
-  padding: 2vw 0 2vw 0;
+  padding: 1vw 0 1vw 0;
+}
+
+.beltPosition
+{
+  position: absolute;
+  top: 55%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100px;
+  z-index: 2;
 }
 
 #whiteBeltImg {
   position: absolute;
-  top: 60%;
+  top: 55%;
   left: 50%;
   transform: translateX(-50%);
-  width: 7vw;
+  width: 100px;
+  z-index: 2;
+}
+#yellowBeltImg {
+  position: absolute;
+  top: 55%;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100px;
   z-index: 2;
 }
 
