--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -198,7 +198,7 @@ body {
 
 .custom-card {
   /* display: flex; */
-  padding:1rem 3rem;
+  /* padding:1rem 3rem; */
   height: 83vh;
   width: 100%;                  
   background-color: #f7dec4;
@@ -233,6 +233,15 @@ body {
   width: 35vw;
   padding: 2rem; /* Optional: add padding for spacing */
   margin: 0 auto;
+}
+
+.redDivLogin
+{
+  height: 350px;
+}
+
+#redDiv.redDivLogin .form-group {
+  margin-bottom: 7%;
 }
 
 .custom-card .card-title {
@@ -441,21 +450,14 @@ input::placeholder {
   z-index: 2;
 }
 
-#whiteBeltImg {
-  position: absolute;
-  top: 55%;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 100px;
-  z-index: 2;
-}
-#yellowBeltImg {
-  position: absolute;
-  top: 55%;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 100px;
-  z-index: 2;
+/* Center everything horizontally in .custom-card for Login only */
+.custom-card-items-centered
+{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 
 
