--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -178,6 +178,8 @@ body {
 }
 
 
+
+
 /* homepage paint overlay */
 .paint-overlay {
   position: relative;
@@ -293,7 +295,7 @@ body {
 
 .card-img-top{
   width: 100%;
-  max-width: 45vw;
+  max-width: 36vw;
   height: auto;
   margin: 0 auto;
   display: block;
@@ -391,3 +393,18 @@ input::placeholder {
   background-color: #ffe5e5;
 }
 
+.error-message {
+  color: rgb(255, 0, 0);
+  font-size: 1.2rem;
+  margin-top: 0.5rem;
+}
+
+/* for sign up button apprearance */
+.hero-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  min-height: 60vh; 
+  padding: 2rem;
+}
