--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -113,7 +113,7 @@ body {
 
 
 
-#NavContainer{
+.NavContainer{
   width: 91vw;
   height: 12vh;
   position: absolute;
@@ -171,8 +171,35 @@ body {
   position: relative;
 }
 
+#profileIconDiv
+{
+  position:absolute;
+  right: 0;
+  top: 3%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  /* outline: 2px solid black; */
 
+}
 
+#ProfileIcon
+{
+  height: 10vh; 
+}
+
+#ProfileText
+{
+  position: absolute;
+  right: -0.4%;
+  top: calc(100% + 2px); /* 2px below the icon, adjust as needed */
+  width: 100px; /* match or slightly exceed icon width */
+  text-align: center;
+  font-size: 1.1rem;
+  margin: 0;
+  pointer-events: none;
+}
 
 
 /*____________________________________________________________*/
@@ -368,8 +395,6 @@ body {
   font-size: 2vw;
 }
 
-
-
 .custom-card .card-title {
   font-size: 2.5rem;
   font-weight: 500;
@@ -438,8 +463,32 @@ body {
   width: 70%;
 } 
 
+.card-img-top{
+  width: 100%;
+  max-width: 28vw;
+  height: auto;
+  margin: 0 auto;
+  display: block;
+}
+atures li, .about li {
+  text-align: left;      
+}
 
+.features p{
+  margin: 0.1rem 0;
+}
 
+.form-group{
+  /* width: 30vw; */
+  padding: 0.5rem;
+}
+
+.card-form {
+  display: flex;
+  flex-direction: column;
+  /* gap: 1rem; */
+  width: 70%;
+} 
 
 .card-img-top{
   width: 100%;
@@ -448,7 +497,6 @@ body {
   margin: 0 auto;
   display: block;
 }
-
 
 input
 {
