--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -214,6 +214,7 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
+  word-break: break-all;
 }
 
 #UsernameDiv
