--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1147,7 +1147,8 @@ textarea::placeholder {
   .about-scroll { padding-bottom: 6rem !important; }
 }
 
+/*
 @media (min-width: 1600px){
-  .team-belt-wrapper { bottom: -40px; } /* move up slightly */
+  .team-belt-wrapper { bottom: -40px; } /* move up slightly 
 }
-
+*/
