--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -832,7 +832,8 @@ textarea::placeholder {
   border-radius: 1rem;
   padding: 1rem;
   width: 100%;
-  max-height: 200px;
+  height: 50%;
+  /* max-height: 200px; */
   overflow: hidden;
   display: flex;
   flex-direction: column;
